--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="google" content="notranslate" />
     <link href="/manifest.json" rel="manifest" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="OpenList" />
-    <link rel="apple-touch-icon" href="https://res.oplist.org/logo/logo.png" />
-    <link
-      rel="shortcut icon"
-      type="image/ico"
-      href="https://res.oplist.org/logo/logo.svg"
-    />
     <title>Loading...</title>
     <script>
       window.OPENLIST_CONFIG = {
@@ -29,7 +23,6 @@
     </script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
     <script src="/src/main.tsx" type="module"></script>
